src/objects/Answer__c.object
<CustomObject>
    <description>To store user&apos;s response to questions</description>
    <fields>
        <fullName>Answer_Group__c</fullName>
        <description>Auto number dynamically generated from apex class to determine the group the Answer belongs to</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <description>The actual answer that the user responded with for the question</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>App_Generate_Fee_Date__c</fullName>
        <description>Used to decide the answer needs to be deleted or not upon expiration of question</description>
        <formula>IF(NOT(ISNULL(License__r.Attestation_Date__c)),License__r.Attestation_Date__c, 
NULL 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Generate Fee Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Additional comment to particular answer record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_id_of_Question__c</fullName>
        <description>External id of Question</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External id of Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The license with which this answer is related</description>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewQuestiongroup__c</fullName>
        <description>This is for decoupling questions from answers</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NewQuestiongroup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page Question</label>
        <referenceTo>BGCK__Page_Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Question_External_Id__c</fullName>
        <description>Parent Question External Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Question External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Body__c</fullName>
        <description>This is the question that was answered</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Question Body</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Group__c</fullName>
        <description>Question group number that is fetched from the Question</description>
        <formula>Question__r.Question_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the version of the question that was answered.</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_By_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to verify if the responses are submitted by the Portal User and this can be used to make responses editable</description>
        <label>Submitted By Portal User?</label>
        <type>Checkbox</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Permit__c</columns>
        <columns>Question_Body__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ANS-{000000}</displayFormat>
        <label>Answer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>